# inclined_well

./: .gitignore  CMakeLists.txt  Grid.cpp  Grid.hpp  Makefile  VerticalWellFlow.cpp  VerticalWellFlow.hpp  Well.cpp  Well.hpp  WellFlow.cpp  WellFlow.hpp  config.xml  inclined_well.VC.opendb  inclined_well.sln  inclined_well.vcxproj  inclined_well.vcxproj.filters  main.cpp
Debug/: InclinedSum.cu.cache  Well.cu.cache  inclined_well.ilk  vc140.idb
Debug/inclined_well.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  inclined_well.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/src/: InclinedSum.cu.deps  Well.cu.deps
Release/: InclinedSum.cu.cache  Well.cu.cache  inclined_well.iobj  inclined_well.ipdb
Release/inclined_well.tlog/: CL.command.1.tlog
Release/src/: InclinedSum.cu.deps  Well.cu.deps
doc/: Makefile  inclined_well.tex
src/: Fracture.hpp  InclinedSum.cu  InclinedSum.cuh  Properties.hpp  Snapshotter.cpp  Snapshotter.hpp  VerticalWellFlow.cpp  VerticalWellFlow.hpp  Well.cpp  Well.cu  Well.cuh  Well.hpp  WellFlow.cpp  WellFlow.h  WellFlow.hpp  main.cpp
src/inclined_sum/: BaseSum.cpp  BaseSum.h  Frac2dSum.cpp  Frac2dSum.hpp  Inclined3dSum.cpp  Inclined3dSum.h  InclinedSum.cpp  InclinedSum.hpp  InsideFrac1D.hpp  InsideFrac1d.cpp  VerticalDirichlet.cpp  VerticalDirichlet.h  VerticalNeumann.cpp  VerticalNeumann.h
src/inclined_sum/neumann/: VerticalNeumann.cpp  VerticalNeumann.h  VerticalNeumannBoundaries.cpp  VerticalNeumannBoundaries.h  VerticalNeumannGaussBoundaries.cpp  VerticalNeumannGaussBoundaries.h  VerticalNeumannUniformBoundaries.cpp  VerticalNeumannUniformBoundaries.h
src/inclined_sum/welltests/: HorizontalLogDerivation.cpp  HorizontalLogDerivation.hpp
src/summators/: BaseSum.cu  BaseSum.cuh  Inclined3dSum.cu  Inclined3dSum.cuh  InclinedSum.cu  InclinedSum.cuh
src/utils/: Point.hpp  perf-utils.cpp  perf-utils.hpp
task/: 2d.xml  config.xml  config2d.xml  config3d.xml  config3d_new.xml  frac2d.xml  horizontal.xml  new.xml  slanted.xml  vertical.xml
test/: vertical_test.cpp
test/perf/: 2dVS3d.cpp  openmp_test.cpp  utils.cpp  utils.hpp  vertical_test.cpp
tools/: build.sh
